# mex-invenio

./: .cruft.json  .dockerignore  .gitignore  .gitmodules  .invenio  .pre-commit-config.yaml  AUTHORS  Dockerfile  Makefile  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg  mex.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  run-tests.sh
site/: .gitkeep  setup.cfg
site/mex_invenio/: IMPORT.md  README.md  __init__.py  cli.py  custom_facets.py  custom_params.py  custom_record.py  custom_schema.py  custom_search.py  ext.py  i18next-scanner.config.js  package.json  services.py  systemfields.py  views.py  webpack.py
site/mex_invenio/alembic/: 20251218_214700_add_custom_fields_indices.py  __init__.py  a12c08876802_add_custom_fields_indices.py
site/mex_invenio/config/: README.md  __init__.py  settings.py
site/mex_invenio/custom_fields/: backwards_linked_records.py  custom_fields.py  entitityidentifier.py  ext_ids.py  field_types.py  fixededtfdatestringcf.py  link.py  multilanguagetext.py  pref_labels.py
site/mex_invenio/fields/: __init__.py  custom_fields.py  field_types.py  multilanguagetext.py  systemfields.py
site/mex_invenio/oai/: mex.py
site/mex_invenio/record/: data_processing.py  record.py  utils.py
site/mex_invenio/records/: __init__.py  api.py
site/mex_invenio/scripts/: diff_manager.py  file_resolver.py  get_fields_types.py  get_linked_properties.py  import_data.py  initial_import.py  merge_translations.py  no_op_indexer.py  publisher_small.ndjson  (+3 more)
site/tests/: conftest.py  test_import_data.py
(+205 files in other folders)
