[metadata]
name = mex-invenio

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    mex_invenio_views = mex_invenio.views:create_blueprint
invenio_assets.webpack =
    mex_invenio_theme = mex_invenio.webpack:theme
invenio_search.mappings =
    mexrecords = mex_invenio.records.mappings
invenio_jsonschemas.schemas =
    mexrecords = mex_invenio.records.jsonschemas
